# media-request

./: .gitignore  .tmux_manager.sh  app.py  cmd.sh  enrich.py  jellyfin_test.py  main.py  movie-request.service  pyproject.toml
