[project]
name = "media-request"
version = "0.1.0"
description = ""
authors = [
    {name = "Riju",email = "mailmeonriju@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "pydantic (>=2.12.5,<3.0.0)",
    "streamlit (>=1.53.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
