[project]
name = "media-request"
version = "0.1.0"
description = ""
authors = [
    {name = "Riju",email = "mailmeonriju@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "pydantic (>=2.12.5,<3.0.0)",
    "streamlit (>=1.53.1,<2.0.0)",
    "jellyfin-sdk (>=0.3.0,<0.4.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "streamlit-authenticator (>=0.4.2,<0.5.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "click (>=8.3.1,<9.0.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
